<resources>
    <string name="app_name">LambTracker</string>
    <string name="app_name_long">Weyr Associates LambTracker</string>
    <string name="app_name_settings">Weyr Associates LambTracker - Settings</string>
    <string name="real_database_file">lambtracker_db.sqlite</string>
    <string name="database_path">/data/data/com.weyr_associates.lambtracker/databases/</string>
    <string name="service_started">EID Service Running</string>
    <string name="service_label">EID Service</string>
    <string name="menu_settings">Settings</string>
    <string name="exec_sql_btn">Execute SQL</string>
    <string name="edit_db_btn">Edit DB</string>
    <string name="copy_db_assets_btn">Load Blank DB in Assets</string>
    <string name="select_db_file_btn">Select DB File</string>
    <string name="show_db_btn">Show DB</string>
    <string name="backup_db_btn">Backup DB</string>
    <string name="next_rec_btn">Next Record</string>
    <string name="prev_rec_btn">Prev. Record</string>
    <string name="clear_btn">Clear</string>
    <string name="enter_btn">Enter</string>
    <string name="quit_btn">Quit</string>
    <string name="back_btn">Back</string>
    <string name="view_btn">View</string>
    <string name="help_btn">Help</string>
    <string name="update_btn">Update</string>
    <string name="update_database_btn">Update Database</string>
    <string name="update_tag_btn">Update Tag</string>
    <string name="update_display_btn">Update Display</string>
    <string name="update_eid_tag_btn">Update EID Tag</string>
    <string name="delete_btn">Delete</string>
    <string name="close_btn">Close</string>
    <string name="cancel_btn">Cancel</string>
    <string name="sheep_change_date_btn">Change Date</string>
    <string name="sheep_set_date_btn">Set Date</string>
    <string name="sheep_set_time_btn">Set Time</string>
    <string name="alert_btn">Alert</string>
    <string name="add_alert_btn">Add Alert</string>
    <string name="remove_alert_btn">Remove Alert</string>
    <string name="take_note_btn">Take Note</string>
    <string name="ok">OK</string>
    <string name="scan_eid_btn">Scan EID Tag</string>
    <string name="search_fed_btn">Search Federal Tag</string>
    <string name="search_farm_btn">Search Farm Tag</string>
    <string name="remove_fedtag_btn">Remove Fed Tag</string>
    <string name="remove_this_tag_btn">Remove This Tag</string>
    <string name="remove_farmtag_btn">Remove Farm Tag</string>
    <string name="remove_eidtag_btn">Remove EID Tag</string>
    <string name="remove_paint_btn">Remove Paint Mark</string>
    <string name="add_new_tag_btn">Add New Tag</string>
    <string name="save_evaluation_scores_btn">Save Scores</string>
    <string name="create_evaluation_task_btn">Create Evaluation</string>
    <string name="look_up_sheep_btn">Look Up Sheep</string>
    <string name="add_lamb_btn">Add a Lamb</string>
    <string name="print_label_btn">Print Label</string>
    <string name="dispose_btn">Dispose</string>
    <string name="new_lot_btn">New Lot</string>
    <string name="drug_details_btn">Show Details</string>
    <string name="load_sheeplist">Load Sheep Database</string>
    <string name="look_up_sheep">Look up a Sheep by EID</string>
    <string name="copy_real_db_action">copyRealDB</string>
    <string name="select_file_db_action">selectFileDB</string>
    <string name="show_real_db_action">showRealDB</string>
    <string name="title_activity_load_sheep_list">Manage Sheep Database</string>
    <string name="title_activity_look_up_sheep">Look Up Sheep</string>
    <string name="title_activity_edit_database">Edit Sheep Database</string>
    <string name="title_activity_lamb_tracker_receiver">Lamb Tracker Receiver</string>
    <string name="title_activity_incoming_receiver">IncomingReceiver</string>
    <string name="title_activity_convert_to_eid">ID Management</string>
    <string name="title_activity_evaluate_sheep">Evaluate Sheep</string>
    <string name="title_activity_test_interface_designs">Test Interface Designs</string>
    <string name="title_activity_create_sheep_evaluation">Create Evaluation Task</string>
    <string name="title_activity_lambing_sheep">Lambing Sheep</string>
    <string name="title_activity_add_lamb">Add a Lamb</string>
    <string name="title_activity_fix_lamb">Fix a Lamb Record</string>
    <string name="title_activity_sheep_management">Individual Sheep Management</string>
    <string name="title_activity_group_sheep_management">Group Sheep Management</string>
    <string name="title_activity_sheep_management_menu">Sheep Management Menu</string>
    <string name="title_activity_print_labels">Print Labels</string>
    <string name="title_activity_set_lambtracker_defaults">Set LambTracker Defaults</string>
    <string name="title_activity_set_defaults">SetDefaults</string>
    <string name="title_activity_ram_breeding_record">Create Ram Breeding Record</string>
    <string name="title_activity_ewe_breeding_record">Create Ewe Breeding Record</string>
    <string name="title_activity_drug_management">Manage Drug Inventory</string>
    <string name="title_activity_draw_blood">Draw Blood</string>
    <string name="title_activity_remove_sheep">Remove Sheep</string>
    <string name="title_activity_remove_drug">Remove Drug</string>
    <string name="title_activity_desktop_functions">Desktop Functions</string>
    <string name="title_activity_set_alert">Set or Remove Alerts</string>
    <string name="title_activity_create_ram_breeding_record">CreateRamBreedingRecord</string>
    <string name="title_activity_create_ewe_breeding_record">Create Ewe Breeding Record</string>
    <string name="alert_warning">Alert Screen</string>
    <string name="help_warning">Help Screen</string>
    <string name="help_manage_id">Select a sheep based on some form of ID. Currently federal, farm, electronic, paint and name 
        ID types are recognized. Soon we will be adding tattoo, split and ear notch as ways to look up a sheep.  </string>
    <string name="help_evaluate">Evaluate sheep based on the criteria you select. Use the select to locate a sheep by Federal, 
        Farm or Scanning an EID tag. Then select the scores for each trait. When finished select Save Scores
        to write the data to the database with an evaluation date of today. </string>
    <string name="help_create_evaluate">Create a list of traits to evaluate on this run with the sheep. 
        You may select 10 scored items, 5 real data items and 5 custom items. </string>
    <string name="help_look_up_sheep">Select a sheep using the EID reader or by entering in another form of identification. 
   	    All the tags for that sheep will be displayed in the scrolling view below. If you need to correct tags you will need to do 
   	    that separately in the ID Management task. The notes for this sheep are shown below the tags.  </string>
    <string name="help_lambing_sheep">Select a sheep using the EID reader or by entering in another identification. 
   	    All the tags for that sheep will be displayed in the scrolling view below. The ewe\'s last lambing results will be shown.
   	    If there are any lambs from that sheep for this year their identification will also be listed. You can choose to add lambs 
   	    here to collect data on the birth. </string>
    <string name="help_add_lamb">Add the information on this lamb. Be sure to put the first lamb born in first and the second lamb 
         born in second.  </string>
    <string name="help_fix_lamb">Edit and update information about a lamb if you did not finish entering in or have errors. Currently 
        you can only edit the rearing type, sex and lambease values. </string>
    <string name="help_print">This prints a single label with the EID as a bar code and the name of the sheep on it.  </string>
    <string name="help_management">Select the management tasks you have done for this sheep and then update the database. </string>
    <string name="convert_fill_fields">Please Fill in all four fields.</string>
    <string name="id_management_remove_tag">Remove the existing tag of this type before adding a new one.</string>
    <string name="id_management_remove_tag_header">Tag Remove Problem</string>
    <string name="add_lamb_fill_title">Add a Lamb</string>
    <string name="add_lamb_fill_reartype">Please Fill in a Rearing Type value.</string>
    <string name="add_lamb_fill_lambease">Please Fill in a Lambease value.</string>
    <string name="drug_loc_fill_fields">Please Fill in a Shot Location.</string>
    <string name="vaccine_fill_fields">Please Fill in a Vaccine.</string>
    <string name="wormer_fill_fields">Please Fill in a Wormer.</string>
    <string name="drug_fill_fields">Please Fill in a Drug.</string>
    <string name="blood_fill_fields">Please Fill in a Blood Test.</string>
    <string name="enter_tag_data">Enter Tag Data</string>
    <string name="wrong_id_location">Invalid ID Location</string>
    <string-array name="sheep_task_array">
        <item>Choose a Flock Task</item>
        <item>Manage Sheep Database</item>
        <item>Look Up a Sheep</item>
        <item>Sheep Management Menu</item>
        <item>ID Management</item>
        <item>Create a Sheep Evaluation Task</item>
        <item>Fix Lamb Record</item>
        <item>Print Labels</item>
        <item>Edit Database</item>
        <item>Desktop Functions</item>
        <item>Set LambTracker Defaults</item>
        <item>Test Interface Designs</item>
    </string-array>
    <string name="sheep_name_lbl">Sheep Name</string>
    <string name="flock_prefix_lbl">Flock Prefix</string>
    <string name="sheep_sex_lbl">Sex</string>
    <string name="sheep_birth_date_lbl">Birth Date</string>
    <string name="sheep_birth_type_lbl">Birth Type</string>
    <string name="sheep_birth_weight_lbl">Birth Weight</string>
    <string name="sheep_rear_type_lbl">Rear Type</string>
    <string name="sheep_death_date_lbl">Death Date</string>
    <string name="sheep_remove_date_lbl">Remove Date</string>
    <string name="sheep_remove_reason_lbl">Remove Reason</string>
    <string name="sheep_lambease_lbl">Lambease Score</string>
    <string name="sheep_sire_lbl">Sire</string>
    <string name="sheep_service_lbl">Service Type</string>
    <string name="sheep_dam_lbl">Dam</string>
    <string name="sheep_stillborn">Stillborn</string>
    <string name="sheep_stillborn_lbl">Stillborn Status</string>
    <string name="mark_ewe">Mark Ewe</string>
    <string name="sheep_blood">Take Blood For</string>
    <string name="sheep_trimtoes">Trim Toes</string>
    <string name="sheep_weaned">Wean</string>
    <string name="sheep_givewormer">Give Wormer</string>
    <string name="sheep_givevaccine">Give Vaccine</string>
    <string name="sheep_givedrug">Give Drug</string>
    <string name="sheep_removedrug">Remove Drug</string>
    <string name="sheep_remove">Remove</string>
    <string name="drug_reason_lbl">Reason</string>
    <string name="sheep_takeweight">Take Weight</string>
    <string name="sheep_shear">Shear Sheep</string>
    <string name="federal_id_lbl">Federal ID</string>
    <string name="farm_id_lbl">Farm ID</string>
    <string name="electronic_id_lbl">Electronic ID</string>
    <string name="paint_id_lbl">Paint ID</string>
    <string name="input_id_lbl">Input Search String</string>
    <string name="tag_number_lbl">Tag Number</string>
    <string name="tag_record_lbl">ID #</string>
    <string name="tag_type_lbl">Tag Type</string>
    <string name="tag_type_abbrev_lbl">Type</string>
    <string name="tag_color_lbl">Tag Color</string>
    <string name="paint_color_lbl">Paint Color</string>
    <string name="tag_color_abbrev_lbl">Color</string>
    <string name="tag_location_abbrev_lbl">Ear</string>
    <string name="sql_command_lbl">SQL Command</string>
    <string name="results_lbl">Results</string>
    <string name="title_activity_sort_sheep">Sort Sheep</string>
	<string name="managedrugs_lbl">Drugs: Current Inventory</string>
</resources>