<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <GridLayout 
        	android:id="@+id/grid1"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
        	android:columnCount="3"
       		android:rowCount="3">
        
           <TextView
            android:layout_width="205dp"
            android:layout_height="wrap_content"     
            android:layout_gravity="left"
            android:layout_column="0"
            android:layout_row="0"
            android:inputType="none"
            android:text="@string/input_id_lbl" />
           
           <EditText
            android:id="@+id/inputText"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_column="0"
            android:layout_row="1"
            android:enabled="true"
            android:inputType="text"
            android:textSize="18sp"
            android:typeface="monospace" >
			</EditText>
            
  			<TextView
        	android:layout_width="150dp"
       	 	android:layout_height="wrap_content"
        	android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="0"
            android:inputType="none"
        	android:text="@string/sheep_name_lbl" />
        
        <TextView
        	android:id="@+id/sheepnameText"
        	android:layout_width="150dp"
       	 	android:layout_height="wrap_content"
           	android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:ems="10"
        	android:gravity="left"
        	android:textSize="18sp"
        	android:typeface="monospace" />       
       </GridLayout>  
       
 <RelativeLayout
    android:id="@+id/RelativeLayout02"
    android:orientation="horizontal" 
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">    
     
     <Spinner
        android:id="@+id/tag_type_spinner"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="18sp" />
     
     <Button
            android:id="@+id/look_up_sheep_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/tag_type_spinner"
            android:onClick="lookForSheep"
            android:text="@string/look_up_sheep_btn"
            android:textSize="14sp" />
    
     <Button
            android:id="@+id/alert_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/look_up_sheep_btn"
            android:onClick="showAlert"
            android:text="@string/alert_btn"
            android:textSize="14sp" /> 
            
     <Button
            android:id="@+id/scan_eid_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:onClick="scanEid"
            android:text="@string/scan_eid_btn"
            android:textSize="14sp" />
     
  </RelativeLayout>
  		
		<GridLayout
	        android:id="@+id/grid2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:columnCount="5">   	    
	     	    
	        <TextView
	            android:layout_width="176dp"
	            android:layout_height="wrap_content"
	            android:layout_column="1"
	            android:layout_gravity="left|top"
	            android:layout_row="0"
	            android:inputType="none"
	            android:text="@string/tag_number_lbl" />
	        
	        <TextView
	            android:layout_width="65dp"
	            android:layout_height="wrap_content"
	            android:layout_column="2"
	            android:layout_gravity="left"
	            android:layout_row="0"
	            android:inputType="none"
	            android:text="@string/tag_color_abbrev_lbl" />
	        
	        <TextView
	            android:layout_width="40dp"
	            android:layout_height="wrap_content"
	            android:layout_column="3"
	            android:layout_gravity="left"
	            android:layout_row="0"
	            android:inputType="none"
	            android:text="@string/tag_location_abbrev_lbl" />
	        
	        <TextView
	            android:layout_width="80dp"
	            android:layout_height="wrap_content"
	            android:layout_column="4"
	            android:layout_gravity="left"
	            android:layout_row="0"
	            android:inputType="none"
	            android:text="@string/tag_type_abbrev_lbl" />
        
     	</GridLayout>
    	    
      	<ListView 
			android:id="@+id/android:list" 
	  		android:layout_height="wrap_content"
	  		android:layout_width="fill_parent">
		</ListView>
	<View
	    android:id="@+id/dividerbar02"
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@android:color/black">
	</View>
    
    <ListView 
			android:id="@+id/android:list2" 
	  		android:layout_height="wrap_content"
	  		android:layout_width="fill_parent">
	</ListView>
    

<RelativeLayout
    android:id="@+id/RelativeLayout04"
    android:orientation="horizontal" 
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
	        
      	<Button
            android:id="@+id/add_lamb_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
           	android:layout_alignParentLeft="true"
            android:onClick="addLamb"
            android:text="@string/add_lamb_btn"
            android:textSize="14sp" />
	</RelativeLayout>
	      	
<RelativeLayout
    android:id="@+id/RelativeLayout03"
    android:orientation="horizontal" 
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
    	
       	<Button
            android:id="@+id/back_to_main_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
           	android:layout_alignParentLeft="true"
            android:onClick="backBtn"
            android:text="@string/back_btn"
            android:textSize="14sp" />
       	
       	<Button
            android:id="@+id/clear_form_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/back_to_main_btn"
            android:onClick="clearBtn"
            android:text="@string/clear_btn"
            android:textSize="14sp" />
       	<Button
           android:id="@+id/help_btn"
           android:layout_width="100dp"
           android:layout_height="50dp"
           android:layout_alignParentRight="true"
           android:onClick="helpBtn"
           android:text="@string/help_btn"
           android:textSize="14sp" />
       	</RelativeLayout>

</LinearLayout>