<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sql_command_lbl"
        android:textSize="18sp" />
                 
    <EditText
        android:id="@+id/sqlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:ems="10"
        android:enabled="true"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        android:textSize="24sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/results_lbl" 
        android:textSize="18sp" />

    <EditText
        android:id="@+id/sqlOutput"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="top"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:typeface="monospace" />
    
<GridLayout
    android:id="@+id/grid1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="2" >
        
    <Button
        android:id="@+id/exec_sql_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="0"
        android:onClick="execSQL"
        android:text="@string/exec_sql_btn" />

    <Button
        android:id="@+id/prev_rec_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:onClick="moveToPrevRecord"
        android:text="@string/prev_rec_btn" />
    
    <Button
        android:id="@+id/next_rec_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:onClick="moveToNextRecord"
        android:text="@string/next_rec_btn" />
        
    <Button
        android:id="@+id/clear_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:onClick="clearBuffers"
        android:text="@string/clear_btn" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="1"
        android:onClick="goBack"
        android:text="@string/back_btn" />
</GridLayout>
</LinearLayout>