<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_activity_convert_to_eid"
        android:textSize="12sp" />

  <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"     
            android:layout_gravity="left"
            android:inputType="none"
            android:text="@string/input_id_lbl" />

        <EditText
            android:id="@+id/inputText"
           android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:enabled="true"
            android:inputType="text"
            android:textSize="12sp"
            android:typeface="monospace" >
            <requestFocus />
        </EditText>
   
    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6" >

        <Button
            android:id="@+id/scan_eid_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:onClick="scanEid"
            android:text="@string/scan_eid_btn" />
        
        <Button
            android:id="@+id/search_fed_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:onClick="searchFedTag"
            android:text="@string/search_fed_btn" />
        
        <Button
            android:id="@+id/search_farm_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:onClick="searchFarmTag"
            android:text="@string/search_farm_btn" />
        
        <Button
            android:id="@+id/search_other_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:onClick="searchOtherId"
            android:text="@string/search_other_btn" />
        
          <Button
            android:id="@+id/update_tag_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:onClick="updateTag"
            android:text="@string/update_btn" />

        <Button
            android:id="@+id/remove_tag_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:onClick="removeTag"
            android:text="@string/remove_tag_btn" />

        <Button
            android:id="@+id/add_new_tag_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:onClick="addNewTag"
            android:text="@string/add_new_tag_btn" />

        <Button
            android:id="@+id/clear_form_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:onClick="clearBtn"
            android:text="@string/clear_btn" />

        <Button
            android:id="@+id/back_to_main_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:onClick="backBtn"
            android:text="@string/back_btn" />

    </GridLayout>

     <TextView
        	android:layout_width="match_parent"
       	 	android:layout_height="wrap_content"
        	android:inputType="none"
        	android:text="@string/sheep_name_lbl" />
        
        <EditText
        	android:id="@+id/sheepnameText"
        	android:layout_width="match_parent"
       	 	android:layout_height="wrap_content"
            android:enabled="true"
            android:ems="10"
        	android:gravity="start"
        	android:inputType="text"
        	android:textSize="12sp"
        	android:typeface="monospace" >    
    	</EditText>
    	<EditText
        android:id="@+id/idOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        android:typeface="monospace" />
        
         
</LinearLayout>